--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -614,7 +614,49 @@
     "\n",
     "This command should return a response like below\n",
     "\n",
-    "```Initialized empty Git repository in absolute_path_of_project_directory/.git/```\n"
+    "```Initialized empty Git repository in project_directory/.git/```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, add all the files to the new repo using \n",
+    "\n",
+    "```$ git add -A```\n",
+    "\n",
+    "and commit the changes using the following\n",
+    "\n",
+    "```$ git commit -m \"COMMIT COMMENT\"```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A successful commit is denoted by a list of the files changed via the commit (in this case, all the files in the project directory since we are newly adding them to the initialized repository)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then connect the main branch to the repo we made previously on Github. First, use the command\n",
+    "\n",
+    "```$ git branch -M main```\n",
+    "\n",
+    "to branch to main, then connect the folder to the repository like below\n",
+    "\n",
+    "```$ git remote add origin https://github.com/USER/REPOSITORY.git```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we push the changes to the repository we created on Github using the command below\n",
+    "\n",
+    "```$ git push -u origin main```"
    ]
   }
  ],
